assets/css/main.css
/* ... */
			input[type="submit"].primary:hover,
			input[type="reset"].primary:hover,
			input[type="button"].primary:hover,
			.button.primary:hover {
				background-color: #d05e5e;
			}

			input[type="submit"].primary:active,
			input[type="reset"].primary:active,
			input[type="button"].primary:active,
			.button.primary:active {
				background-color: #c23939;
			}

		input[type="submit"].disabled, input[type="submit"]:disabled,
		input[type="reset"].disabled,
		input[type="reset"]:disabled,
		input[type="button"].disabled,
		input[type="button"]:disabled,
		.button.disabled,
		.button:disabled {
			background-color: #888 !important;
			box-shadow: inset 0 -0.15em 0 0 rgba(0, 0, 0, 0.15);
			color: #fff !important;
			cursor: default;
			opacity: 0.25;
		}

/* Features */

	.features article {
		border-top: solid 3px #f4f4f4;
		margin-bottom: 2.25em;
		padding-top: 2.25em;
	}

		.features article:first-child {
			border-top: 0;
			padding-top: 0;
		}

		.features article .image {
			display: inline-block;
			padding-right: 1em;
			vertical-align: middle;
			text-align: center;
			width: 25%;
		}

			.features article .image img {
				display: block;
				width: 100%;
				align-items: center;
				font-size: 10rem;
			}

		.features article .inner {
			display: inline-block;
			vertical-align: middle;
			width: 74%;
		}

			.features article .inner > :last-child {
				margin-bottom: 0;
			}

/* Header */

	#header {
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-flex-direction: column;
		-webkit-flex-direction: column;
		-ms-flex-direction: column;
		flex-direction: column;
		-moz-justify-content: space-between;
		-webkit-justify-content: space-between;
		-ms-justify-content: space-between;
		justify-content: space-between;
		background: #ca4a4a;
		color: #d2f2e9;
		height: 100%;
		overflow-y: auto;
		position: fixed;
		text-align: center;
		top: 0;
		width: 23em;
		left: 0;
	}

		#header h1, #header h2, #header h3, #header h4, #header h5, #header h6 {
			color: #ffffff;
		}

			#header h1 a, #header h2 a, #header h3 a, #header h4 a, #header h5 a, #header h6 a {
				color: #ffffff;
			}

		#header header p {
			color: #eab7b7;
		}

		#header a {
			color: #f2d2d2;
		}

			#header a:hover {
				color: #ffffff !important;
			}

		#header > header {
			-moz-flex-shrink: 0;
			-webkit-flex-shrink: 0;
			-ms-flex-shrink: 0;
			flex-shrink: 0;
			padding: 3em;
		}

			#header > header .avatar {
				display: block;
				margin: 0 auto 2.25em auto;
				width: 8em;
			}

			#header > header h1 {
				font-size: 1.75em;
				margin: 0;
			}

			#header > header p {
				color: #f2d2d2;
				font-style: italic;
				margin: 1em 0 0 0;
			}

			#header > header p2 {
				color: #f2d2d2;
				font-style: normal;
				font-size: 0.8em;
				margin: 0em 0 0 0;
			}

		#header > footer {
			-moz-flex-shrink: 0;
			-webkit-flex-shrink: 0;
			-ms-flex-shrink: 0;
			flex-shrink: 0;
			bottom: 0;
			left: 0;
			padding: 2em;
			width: 100%;
		}

			#header > footer .icons {
				margin: 0;
			}

				#header > footer .icons li a {
					color: #eab7b7;
				}

		#header > nav {
			-moz-flex-grow: 1;
			-webkit-flex-grow: 1;
			-ms-flex-grow: 1;
			flex-grow: 1;
		}

			#header > nav ul {
				list-style: none;
				margin: 0;
				padding: 0;
			}

				#header > nav ul li {
					border-top: solid 2px #cf5c5c;
					display: block;
					padding: 0;
				}

					#header > nav ul li a {
						-moz-transition: none;
						-webkit-transition: none;
						-ms-transition: none;
						transition: none;
						border: 0;
						color: #ffffff !important;
						display: block;
						padding: 0.85em 0;
						text-decoration: none;
					}

						#header > nav ul li a.active {
							background: #fff;
							color: #ca4a4a !important;
						}

					#header > nav ul li:first-child {
						border-top: 0;
					}

/* Wrapper */

	#wrapper {
		background: #fff;
		padding-left: 21em;
	}

/* Main */

	#main > section {
		border-top: solid 6px #f4f4f4;
	}

		#main > section > .container {
			padding: 6em 0em 4em 0em;
		}

		#main > section:first-child {
			border-top: 0;
		}

/* Footer */

	#footer {
		background: #fafafa;
		border-top: 0;
		color: #c0c0c0;
		overflow: hidden;
		padding: 4em 0 2em 0;
	}

		#footer .copyright {
			line-height: 1em;
			list-style: none;
			padding: 0;
		}

			#footer .copyright li {
				border-left: solid 1px #d4d4d4;
				display: inline-block;
				font-size: 0.8em;
				margin-left: 1em;
				padding-left: 1em;
			}

				#footer .copyright li:first-child {
					border-left: 0;
					margin-left: 0;
					padding-left: 0;
				}

				#footer .copyright li a {
					color: inherit;
				}

/* XLarge */

	@media screen and (max-width: 1680px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 13pt;
			}

		/* Header */

			#header {
				width: 23em;
			}

				#header > header {
					padding: 2em;
				}

				#header > footer {
					padding: 1.5em;
				}

		/* Wrapper */

			#wrapper {
				padding-left: 23em;
			}

		/* Main */

			#main > section > .container {
				padding: 0em 0 0em 0;
			}

	}

/* Large */

	@media screen and (max-width: 1280px) {

		/* Basic */

			body, input, select, textarea {
				font-size: 11pt;
			}

		/* Header */

			#header {
				position: fixed;
				top: 0;
    			left: 0;
				width: 23em;
			}

		/* Wrapper */

			

	}

/* Medium */

	#titleBar {
		display: none;
	}
/* ... */

